--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0"
 thiserror = "1.0"
 base64 = "0.21"
 chrono = { version = "0.4", features = ["serde"] }
+regex = "1.0"
 
 # MCP Server
 rmcp = { version = "0.1", features = ["server", "transport-io"] }
